[ca] discard undesired spelling suggestions