@@ -43,18 +43,20 @@ public final class MorfologikCatalanSpellerRule extends MorfologikSpellerRule {
     return Arrays.asList("/ca/"+SpellingCheckRule.CUSTOM_SPELLING_FILE, SpellingCheckRule.GLOBAL_SPELLING_FILE,
       "/ca/multiwords.txt", "/ca/spelling-special.txt");
   }
+
   private static final List<String> PARTICULA_INICIAL = Arrays.asList("amb", "sota", "no", "en", "a", "el", "els", "al", "als", "pel",
     "pels", "del", "dels", "del", "de", "per", "un", "uns", "una", "unes", "la", "les", "teu", "meu", "seu", "teus", "meus", "seus");
+  private static final List<String> PREPOSICIONS = Arrays.asList("amb", "en", "sota", "a", "al", "als", "pel", "pels",
+    "pel", "dels", "del", "de", "per");
   private static final List<String> PREFIX_AMB_ESPAI = Arrays.asList("pod", "ultra", "eco", "tele", "anti", "re", "des",
     "sen", "sem", "s", "avant", "auto", "ex", "extra", "macro", "mega", "meta", "micro", "multi", "mono", "mini", "post",
     "retro", "semi", "super", "trans", "pro", "g", "l", "m", "e");
   private static final List<String> ESPAI_AMB_SUFIX = Arrays.asList("a", "o", "i");
-
   private static final List<String> PRONOM_INICIAL = Arrays.asList("em", "et", "es", "se", "ens", "us", "vos", "li", "hi",
     "ho", "el", "la", "els", "les");
+
   private static final Pattern APOSTROF_INICI_VERBS = Pattern.compile("^([lnts])[90]?(h?[aeiouàéèíòóú].*)$",
       Pattern.CASE_INSENSITIVE | Pattern.UNICODE_CASE);
-
   private static final Pattern APOSTROF_INICI_VERBS_M = Pattern.compile("^(m)[90]?(h?[aeiouàéèíòóú].*)$",
       Pattern.CASE_INSENSITIVE | Pattern.UNICODE_CASE);
   private static final Pattern APOSTROF_INICI_NOM_SING = Pattern.compile("^([ld])[90]?(h?[aeiouàéèíòóú]...+)$",
@@ -75,6 +77,7 @@ public final class MorfologikCatalanSpellerRule extends MorfologikSpellerRule {
   private static final List<String> SPLIT_DIGITS_AT_END = Arrays.asList("en", "de", "del", "al", "dels", "als", "a", "i", "o", "amb");
   private static final Pattern VERB_INDSUBJ = Pattern.compile("V.[SI].*");
   private static final Pattern VERB_INDSUBJ_M = Pattern.compile("V.[SI].[123]S.*|V.[SI].[23]P.*");
+  private static final Pattern NOM = Pattern.compile("V.[NG].*|V.P.*|N.*|A.*|PX.*|DD.*");
   private static final Pattern NOM_SING = Pattern.compile("V.[NG].*|V.P..S..|N..[SN].*|A...[SN].|PX..S...|DD..S.");
   private static final Pattern NOM_PLURAL = Pattern.compile("V.P..P..|N..[PN].*|A...[PN].|PX..P...|DD..P.");
   private static final Pattern VERB_INFGERIMP = Pattern.compile("V.[NGM].*");
@@ -99,13 +102,13 @@ public final class MorfologikCatalanSpellerRule extends MorfologikSpellerRule {
     "li", "lo", "ls", "me", "ne", "ns", "se", "te", "us");
   // "l", "m", "n", "s", "t"
 
-  private CatalanTagger tagger;
+  private final CatalanTagger tagger;
 
   public MorfologikCatalanSpellerRule(ResourceBundle messages, Language language, UserConfig userConfig,
       List<Language> altLanguages) throws IOException {
     super(messages, language, userConfig, altLanguages);
     this.setIgnoreTaggedWords();
-    if (language.getVariant() == "valencia") {
+    if (Objects.equals(language.getVariant(), "valencia")) {
       tagger = CatalanTagger.INSTANCE_VAL;
     } else {
       tagger = CatalanTagger.INSTANCE_CAT;
@@ -172,7 +175,7 @@ public final class MorfologikCatalanSpellerRule extends MorfologikSpellerRule {
       }
       String[] parts = replacement.split(" ");
       if (parts.length == 2) {
-        if (parts[1].toLowerCase().equals("s")) {
+        if (parts[1].equalsIgnoreCase("s")) {
           continue;
         }
         // remove wrong split prefixes
@@ -195,9 +198,17 @@ public final class MorfologikCatalanSpellerRule extends MorfologikSpellerRule {
 
       // move some split words to first place
       if (parts.length == 2) {
+        // remove preposition + inflected verb
+        if (parts[1].length() > 1 && PREPOSICIONS.contains(parts[0].toLowerCase())) {
+          String newSuggestion = parts[1];
+          List<AnalyzedTokenReadings> atkn = tagger.tag(List.of(newSuggestion));
+          if (atkn.get(0).matchesPosTagRegex(VERB_INDSUBJ) && !atkn.get(0).matchesPosTagRegex(NOM)) {
+            continue;
+          }
+        }
         if (parts[1].length() > 1 && PARTICULA_INICIAL.contains(parts[0].toLowerCase())) {
           String newSuggestion = parts[1];
-          List<AnalyzedTokenReadings> atkn = tagger.tag(Arrays.asList(newSuggestion));
+          List<AnalyzedTokenReadings> atkn = tagger.tag(List.of(newSuggestion));
           boolean isBalear = atkn.get(0).hasPosTag("VMIP1S0B") && !atkn.get(0).hasPosTagStartingWith("N");
           if (!isBalear) {
             newSuggestions.add(posNewSugg, suggestions.get(i));
@@ -206,7 +217,7 @@ public final class MorfologikCatalanSpellerRule extends MorfologikSpellerRule {
         }
         if (parts[1].length() > 1 && PRONOM_INICIAL.contains(parts[0].toLowerCase())) {
           String newSuggestion = parts[1];
-          List<AnalyzedTokenReadings> atkn = tagger.tag(Arrays.asList(newSuggestion));
+          List<AnalyzedTokenReadings> atkn = tagger.tag(List.of(newSuggestion));
           if (atkn.get(0).matchesPosTagRegex(VERB_INDSUBJ)) {
             newSuggestions.add(posNewSugg, suggestions.get(i));
             continue;
@@ -266,7 +277,7 @@ public final class MorfologikCatalanSpellerRule extends MorfologikSpellerRule {
     }
     parts = StringTools.splitDigitsAtEnd(word);
     if (parts.length > 1) {
-      if (tagger.tag(Arrays.asList(parts[0])).get(0).isTagged()
+      if (tagger.tag(Collections.singletonList(parts[0])).get(0).isTagged()
       && (parts[0].length() > 2 || SPLIT_DIGITS_AT_END.contains(parts[0].toLowerCase()))) {
         return Collections.singletonList(String.join(" ",parts));
       }
@@ -295,7 +306,7 @@ public final class MorfologikCatalanSpellerRule extends MorfologikSpellerRule {
     Matcher matcher = wordPattern.matcher(word);
     if (matcher.matches()) {
       String newSuggestion = matcher.group(suggestionPosition) + addStr;
-      AnalyzedTokenReadings newatr = tagger.tag(Arrays.asList(newSuggestion)).get(0);
+      AnalyzedTokenReadings newatr = tagger.tag(List.of(newSuggestion)).get(0);
       if ((!newatr.hasPosTag("VMIP1S0B") || newSuggestion.equalsIgnoreCase("fer") || newSuggestion.equalsIgnoreCase("ajust")
           || newSuggestion.equalsIgnoreCase("gran")) && matchPostagRegexp(newatr, postagPattern)) {
         return matcher.group(1) + addStr + separator + matcher.group(2);
@@ -312,7 +323,7 @@ public final class MorfologikCatalanSpellerRule extends MorfologikSpellerRule {
     String lcword = word.toLowerCase();
     String pronouns = endsWithPronoun(lcword);
     String verb = lcword.substring(0, word.length() - pronouns.length());
-    AnalyzedTokenReadings newatr = tagger.tag(Arrays.asList(verb)).get(0);
+    AnalyzedTokenReadings newatr = tagger.tag(List.of(verb)).get(0);
     if (matchPostagRegexp(newatr, VERB_INFGERIMP)) {
       return verb + PronomsFeblesHelper.transformDarrere(pronouns, verb);
     }
@@ -320,10 +331,10 @@ public final class MorfologikCatalanSpellerRule extends MorfologikSpellerRule {
       return "";
     }
     if (lcword.startsWith("d") || lcword.startsWith("l")) {
-      verb = verb.substring(1, verb.length());
-      newatr = tagger.tag(Arrays.asList(verb)).get(0);
+      verb = verb.substring(1);
+      newatr = tagger.tag(List.of(verb)).get(0);
       if (matchPostagRegexp(newatr, VERB_INF)) {
-        return lcword.substring(0, 1) + "'" + verb + PronomsFeblesHelper.transformDarrere(pronouns, verb);
+        return lcword.charAt(0) + "'" + verb + PronomsFeblesHelper.transformDarrere(pronouns, verb);
       }
     }
     return "";
